--- a/index.html
+++ b/index.html
@@ -33,42 +33,47 @@
                 <div class="teams">
                     <div class="profile-item card">
                         <div class="image">
-                            <img src="undraw_team_spirit_hrr4.png" alt="profile image">
-                        </div>
-                        <span>Nama:</span><p>John</p>
-                        <span>Hobi:</span><p>Olahraga</p>
-                    </div>
-
-                    <div class="profile-item card">
-                        <div class="image">
-                            <img src="18519452_1361189540629483_2029057142597782502_n.jpg" alt="profile image">
-                        </div>
-                        <span>Nama:</span><p>John</p>
-                        <span>Hobi:</span><p>Olahraga</p>
-                    </div>
-
-                    <div class="profile-item card">
-                        <div class="image">
                             <img src="https://www.kindpng.com/picc/m/495-4952535_create-digital-profile-icon-blue-user-profile-icon.png" alt="profile image">
                         </div>
                         <span>Nama:</span><p>John</p>
                         <span>Hobi:</span><p>Olahraga</p>
+                        <span>Email:</span><p></p>
                     </div>
 
                     <div class="profile-item card">
                         <div class="image">
-                            <img src="https://www.kindpng.com/picc/m/495-4952535_create-digital-profile-icon-blue-user-profile-icon.png" alt="profile image">
+                            <img src="images/photo-library-icon-3.jpg" alt="profile image">
                         </div>
                         <span>Nama:</span><p>John</p>
                         <span>Hobi:</span><p>Olahraga</p>
+                        <span>Email:</span><p></p>
                     </div>
 
                     <div class="profile-item card">
                         <div class="image">
-                            <img src="https://www.kindpng.com/picc/m/495-4952535_create-digital-profile-icon-blue-user-profile-icon.png" alt="profile image">
+                            <img src="images/images.png" alt="profile image">
                         </div>
                         <span>Nama:</span><p>John</p>
                         <span>Hobi:</span><p>Olahraga</p>
+                        <span>Email:</span><p></p>
+                    </div>
+
+                    <div class="profile-item card">
+                        <div class="image">
+                            <img src="images/images.png" alt="profile image">
+                        </div>
+                        <span>Nama:</span><p>John</p>
+                        <span>Hobi:</span><p>Olahraga</p>
+                        <span>Email:</span><p></p>
+                    </div>
+
+                    <div class="profile-item card">
+                        <div class="image">
+                            <img src="images/00000IMG_00000_BURST20200626173820032_COVER.jpg" alt="profile image">
+                        </div>
+                        <span>Nama:</span><p>Rohmat Tri</p>
+                        <span>Hobi:</span><p>Olahraga</p>
+                        <span>Email:</span><p>rohmat.triy@gmail.com</p>
                     </div>
                 </div>
             </div>
