--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <!-- <header>
         <h2>Logo</h2>
         <nav>
             <ul>
@@ -17,15 +17,15 @@
                 <li><a href="#">Menu 3</a></li>
             </ul>
         </nav>
-    </header>
+    </header> -->
 
     <main>
-        <div class="top">
+        <!-- <div class="top">
             <div class="container">
                 <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti porro sint quidem aspernatur quod corporis aperiam? Eaque obcaecati dolores accusamus accusantium, et itaque quidem fuga impedit? Magni accusantium quos fugiat.</h2>
                 <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti a delectus expedita ullam, repellendus atque dolores enim ex earum ab nemo architecto laborum eius, quidem facere at. Omnis, laborum corrupti.</h2>
             </div>
-        </div>
+        </div> -->
 
         <div class="contents">
             <div class="container">
